# local-pdf-llm-extractor

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
prompts/: chunk_prompt.txt  consolidation_prompt.txt  default.txt
scripts/: run_full_wsl.sh
src/pdf_extractor/: __init__.py  cli.py  converter.py  extractor.py  utils.py
