[project]
name = "semantic-pdf-retriever"
version = "0.1.0"
description = "Cross-platform PDF extraction CLI with Markdown conversion and lite-model retrieval (local/OpenRouter)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mineru[all]",
    "pymupdf4llm",
    "torch",
    "torchvision",
    "typer",
    "httpx",
    "rich",
]

[project.scripts]
pdf-extract = "pdf_extractor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_extractor"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "platform_system == 'Windows' or platform_system == 'Linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "platform_system == 'Windows' or platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
